--- a/app/scss/pages/reviews.scss
+++ b/app/scss/pages/reviews.scss
@@ -1,4 +1,5 @@
 .reviews {
+  padding-top: 60px;
   margin-bottom: 200px;
   .container {
     padding-left: 80px;
@@ -36,8 +37,8 @@
   &__item {
     color: #c2c6cb;
     cursor: pointer;
-    &:hover{
-      .youtube-icon{
+    &:hover {
+      .youtube-icon {
         fill: #d60303;
       }
     }
@@ -58,7 +59,7 @@
         top: 50%;
         transform: translateX(-50%) translateY(-50%);
         fill: #ff0000;
-        transition: .2s;
+        transition: 0.2s;
       }
     }
     &-title {
@@ -107,10 +108,18 @@
   max-width: 960px;
   width: 100%;
   height: 500px;
+  position: relative;
+  z-index: 999;
   @media (max-width: 768px) {
     height: 303px;
   }
   iframe {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border: none;
+  }
+  img {
     object-fit: cover;
     width: 100%;
     height: 100%;
@@ -151,7 +160,7 @@
       overflow: hidden;
       padding-top: 27px;
       gap: 0;
-      &.open{
+      &.open {
         height: auto;
       }
     }
@@ -184,26 +193,26 @@
         gap: 0;
       }
     }
-    .btn-wrapper_mobile{
+    .btn-wrapper_mobile {
       display: block;
     }
   }
-  .reviews_hide{
+  .reviews_hide {
     gap: 30px;
-    @media(max-width:1024px){
+    @media (max-width: 1024px) {
       gap: 50px;
       // flex-wrap: wrap;
       // justify-content: start;
     }
-    .reviews__item{
+    .reviews__item {
       max-width: 530px;
       width: 100%;
-      @media(max-width:1024px){
+      @media (max-width: 1024px) {
         max-width: calc(50% - 25px);
         width: 100%;
         flex: auto;
       }
-      @media(max-width:768px){
+      @media (max-width: 768px) {
         max-width: 530px;
       }
     }
